--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "nextjs",
-  "version": "0.1.0",
+  "version": "0.0.0-development",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "semantic-release": "semantic-release"
   },
   "dependencies": {
     "eslint": "8.39.0",
@@ -14,5 +15,15 @@
     "next": "13.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mik23/nextjs.git"
+  },
+  "publishConfig": {
+    "access": "restricted"
+  },
+  "devDependencies": {
+    "semantic-release": "^21.0.2"
   }
 }
