--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "nextjs",
   "version": "0.0.0-development",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -25,5 +24,29 @@
   },
   "devDependencies": {
     "semantic-release": "^21.0.2"
+  },
+  "private": true,
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
+    "@semantic-release/github",
+    "@semantic-release/npm",
+    "@semantic-release/git"
+  ],
+  "release": {
+    "prepare": [
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      {
+        "path": "@semantic-release/git",
+        "assets": [
+          "package.json",
+          "package-lock.json",
+          "CHANGELOG.md"
+        ],
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+      }
+    ]
   }
 }
