--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: 12
       - name: Install dependencies
-        run: npm ci 
+        run: npm install 
       - name: Build app
         run: npm run build 
       - name: Semantic release
