--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/npm": "^10.0.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "next": "13.3.4",
