--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@semantic-release/npm": "^10.0.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
