--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         ],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
-    ]
+    ],
+    "branches": ["main", "staging"]
   }
 }
