--- a/package.json
+++ b/package.json
@@ -51,9 +51,6 @@
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
-    "branches": [
-      "main",
-      "staging"
-    ]
+    "branches": ["+([0-9])?(.{+([0-9]),x}).x", "master", "staging", {"name": "beta", "prerelease": true}, {"name": "alpha", "prerelease": true}]
   }
 }
