--- a/package.json
+++ b/package.json
@@ -51,6 +51,6 @@
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
-    "branches": ["+([0-9])?(.{+([0-9]),x}).x", "master", "staging", {"name": "beta", "prerelease": true}, {"name": "alpha", "prerelease": true}]
+    "branches": ["+([0-9])?(.{+([0-9]),x}).x", "main", "staging", {"name": "beta", "prerelease": true}, {"name": "alpha", "prerelease": true}]
   }
 }
