--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
       "+([0-9])?(.{+([0-9]),x}).x",
       "main",
       "staging",
+      "dev"
       {
         "name": "beta",
         "prerelease": true
